@@ -23,6 +23,7 @@
     * GUI is now handling different sensors for in and out.
     * time series section can now handle different sensors for in and out temperature, pressure and humidity.
     * menu icons have been improved.
+    * cleaning thread only cleans test tables if platform is Windows.
 
   * FIXED:
     * few corrections to make the weather station works on raspberry pi.
